[package]
name = "bulkmorph"
version = "0.1.5"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
clap = "4.5.30"
log = "0.4.26"
mlua = { version = "0.10.3", features = ["lua54"] }
protobuf = "3.7.1"
protobuf-parse = "3.7.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
urlencoding = "2.1.3"
